// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IdeaPageVotes /> it should render as many votes as provided 1`] = `
<div
  className="idea__votes "
  id="votes"
>
  <h2>
    <FormattedMessage
      id="idea.vote.count"
      values={
        Object {
          "num": 2,
        }
      }
    />
  </h2>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <UserBox
      className="idea__vote"
      user={null}
      username={null}
    />
    <UserBox
      className="idea__vote"
      user={null}
      username={null}
    />
  </Row>
  <AllVotesModal
    onToggleModal={[Function]}
    showModal={false}
    votes={
      Array [
        Object {},
        Object {},
      ]
    }
  />
</div>
`;

exports[`<IdeaPageVotes /> it should render nothing when idea has no votes 1`] = `null`;

exports[`<IdeaPageVotes /> it should render show more button when idea has too much votes 1`] = `
<div
  className="idea__votes "
  id="votes"
>
  <h2>
    <FormattedMessage
      id="idea.vote.count"
      values={
        Object {
          "num": 11,
        }
      }
    />
  </h2>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <UserBox
      className="idea__vote"
      user={null}
      username={null}
    />
    <UserBox
      className="idea__vote"
      user={null}
      username={null}
    />
    <UserBox
      className="idea__vote"
      user={null}
      username={null}
    />
    <UserBox
      className="idea__vote"
      user={null}
      username={null}
    />
    <UserBox
      className="idea__vote"
      user={null}
      username={null}
    />
    <UserBox
      className="idea__vote"
      user={null}
      username={null}
    />
    <UserBox
      className="idea__vote"
      user={null}
      username={null}
    />
    <UserBox
      className="idea__vote"
      user={null}
      username={null}
    />
  </Row>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn--outline idea__votes__show-more"
    disabled={false}
    onClick={[Function]}
  >
    <FormattedMessage
      id="idea.vote.show_more"
      values={Object {}}
    />
  </Button>
  <AllVotesModal
    onToggleModal={[Function]}
    showModal={false}
    votes={
      Array [
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
        Object {},
      ]
    }
  />
</div>
`;
